--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="hero-text w-100 text-white px-2 px-sm-0">
                 <h1 class="display-4" data-aos="zoom-in-down" data-aos-duration="3000">Welcome</h1>
                 <p class="lead mb-4" data-aos="zoom-in-up" data-aos-duration="3000">Baked goods like you've never seen before!</p>
-                <a class="btn px-5 mr-2 text-white" href="#" data-aos="flip-right" data-aos-duration="2000">Explore</a>
-                <a class="btn px-5 ml-2 text-white" href="#" data-aos="flip-left" data-aos-duration="2000">Find a store</a>
+                <a class="btn px-5 mr-2 text-white" href="#" data-aos="flip-right" data-aos-duration="2000" data-aos-offset="120">Explore</a>
+                <a class="btn px-5 ml-2 text-white" href="#" data-aos="flip-left" data-aos-duration="2000" data-aos-offset="120">Find a store</a>
 
 
             </div>
